--- a/phone.css
+++ b/phone.css
@@ -31,7 +31,7 @@
 }
 #serve1{
     flex-direction: column;
-    margin: 3px;
+    margin: -36px;
     overflow: hidden;
  }
  #navbar ul li a{
@@ -52,15 +52,25 @@
      margin-top: 0px;
      font-size: 1.5rem;
  }
+ #services h2{
+     overflow: hidden;
+ }
  .box{
      height: 213px;
      width: 85vw;
      overflow: hidden;
+     margin: 5px;
  }
  #serve1 .box img {
-    margin-left: 110px;
-    height: 126px;
-    width: 120px;
+    margin-left: 73px;
+    height: 138px;
+    width: 168px;
+    overflow: hidden;
+}
+#services p{
+    margin-left: 30px;
+    margin-top: 3px;
+    overflow: hidden;
 }
 .ser{
     display: none;
